# adventofcode

./: .gitattributes  .gitignore  README.md
.git-crypt/keys/default/0/: D451910FFC2D0D675DF22FD24C8193B3E56A6575.gpg
2020/: day09.txt
2020/day01/: main  main.pl
2020/day02/: day02.rs  main  main.pl
2020/day03/: main
2020/day04/: main
2020/day05/: main
2020/day06/: main
2020/day07/: index.js  main
2020/day08/: main
2020/js/: day07  day07.js
2020/prolog/: day01  day01.pl  day01_transformed.txt  day02  day02.pl  day02_transformed.txt
2020/rust/: Cargo.toml  build.rs  new_day.sh  template.rs
2020/rust/benches/: criterion.rs
2020/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  lib.rs  main.rs  processor.rs  util.rs
2020/shell/: day03  day04  day05  day06  day08
2021/: day02.txt  day03.txt
2021/rust/: Cargo.toml  build.rs  new_day.sh
2021/rust/benches/: criterion.rs
2021/rust/src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs  util.rs
2022/: day10.txt
2022/rust/: Cargo.toml  build.rs
2022/rust/benches/: criterion.rs
2022/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  lib.rs  main.rs  util.rs
2023/: day01.txt  day16.txt
2023/rust/: .template.rs  Cargo.toml  README.md  build.rs  justfile
2023/rust/benches/: criterion.rs
2023/rust/scripts/: setup-day.sh  write-benchmarks-to-readme.sh
2023/rust/src/: day01.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  util.rs
2024/rust/: Cargo.toml  README.md  build.rs  init-day.sh  justfile
2024/rust/.template/: Cargo.toml
2024/rust/.template/benches/: criterion.rs
2024/rust/.template/src/: main.rs
2024/rust/benches/: criterion.rs
2024/rust/common/: Cargo.toml
2024/rust/day01/: Cargo.toml
2024/rust/day01/benches/: criterion.rs
2024/rust/day01/src/: main.rs  solution.rs
2024/rust/day02/: Cargo.toml
2024/rust/day02/benches/: criterion.rs
2024/rust/day02/src/: lib.rs  solution.rs
2024/rust/day03/: Cargo.toml  day03.txt
2024/rust/day03/benches/: criterion.rs
2024/rust/day03/src/: lib.rs  main.rs  solution.rs
2024/rust/day04/benches/: criterion.rs
2024/rust/day04/src/: lib.rs  solution.rs
2024/rust/day05/benches/: criterion.rs
2024/rust/day05/src/: main.rs  solution.rs
2024/rust/day06/benches/: criterion.rs
2024/rust/day06/src/: lib.rs  main.rs  solution.rs
2024/rust/day07/: Cargo.toml
2024/rust/day07/benches/: criterion.rs
2024/rust/day07/src/: solution.rs
2024/rust/day08/: Cargo.toml
2024/rust/day08/benches/: criterion.rs
2024/rust/day08/src/: lib.rs  main.rs  solution.rs
2024/rust/day09/: Cargo.toml
2024/rust/day09/benches/: criterion.rs
2024/rust/day09/src/: main.rs  solution.rs
2024/rust/day10/: Cargo.toml
2024/rust/day10/benches/: criterion.rs
2024/rust/day10/src/: main.rs  solution.rs
2024/rust/day11/: Cargo.toml
2024/rust/day11/benches/: criterion.rs
2024/rust/day11/src/: lib.rs  solution.rs
2024/rust/day12/: Cargo.toml  day12.txt
2024/rust/day12/benches/: criterion.rs
2024/rust/day12/src/: lib.rs  main.rs  solution.rs
2024/rust/src/: day02.rs  lib.rs  main.rs  util.rs
2025/rust/: Cargo.toml  README.md  init-day.sh  justfile
2025/rust/.template/benches/: criterion.rs
2025/rust/.template/src/: lib.rs
2025/rust/day01/: day01.txt
2025/rust/day01/benches/: criterion.rs
2025/rust/day01/src/: lib.rs  main.rs  solution.rs
2025/rust/day02/: Cargo.toml  after.txt  after2.txt  after3.txt  before.txt  day02.txt
2025/rust/day02/benches/: criterion.rs
2025/rust/day02/src/: main.rs  solution.rs
2025/rust/day03/: Cargo.toml  day03.txt
2025/rust/day03/benches/: criterion.rs
2025/rust/day03/src/: solution.rs
2025/rust/day04/: Cargo.toml  day04.txt
2025/rust/day04/benches/: criterion.rs
2025/rust/day04/src/: main.rs  solution.rs
2025/rust/day05/: Cargo.toml  day05.txt
2025/rust/day05/benches/: criterion.rs
2025/rust/day05/src/: lib.rs  solution.rs
2025/rust/day06/: Cargo.toml  day06.txt
2025/rust/day06/benches/: criterion.rs
2025/rust/day06/src/: solution.rs
2025/rust/day07/: day07.txt
2025/rust/day07/benches/: criterion.rs
2025/rust/day07/src/: lib.rs  main.rs  solution.rs
2025/rust/day08/: Cargo.toml  day08.txt
2025/rust/day08/benches/: criterion.rs
2025/rust/day08/src/: main.rs  solution.rs
2025/rust/day09/: day09.txt
2025/rust/day09/benches/: criterion.rs
2025/rust/day09/src/: lib.rs  solution.rs
2025/rust/day10/: day10.txt
2025/rust/day10/benches/: criterion.rs
2025/rust/day10/src/: lib.rs  solution.rs
2025/rust/day11/: day11.txt
2025/rust/day11/benches/: criterion.rs
2025/rust/day11/src/: main.rs  solution.rs
