[package]
name = "aoc2020"
version = "0.1.0"
authors = ["github.com/sij1nk"]
edition = "2018"

[lib]
name = "aoc2020"
path = "src/lib.rs"

[[bin]]
name = "aoc2020"
path = "src/main.rs"

[dependencies]
itertools = "0.10.0"
build_const = "0.2.1"
regex = "1"

[build-dependencies]
build_const = "0.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "criterion"
harness = false
