[package]
name = "aoc2023"
version = "0.1.0"
authors = ["github.com/sij1nk"]
edition = "2021"

[lib]
name = "aoc2023"
path = "src/lib.rs"

[[bin]]
name = "aoc2023"
path = "src/main.rs"

[dependencies]
itertools = "0.10.0"
build_const = "0.2.1"
regex = "1"
ascii = "1.1.0"
anyhow = "1.0.75"
colored = "2.1.0"

[build-dependencies]
build_const = "0.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "criterion"
harness = false
