[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[lib]
name = "day11"
path = "src/lib.rs"

[[bin]]
name = "day11"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
itertools.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "criterion"
harness = false
